--- a/app/motors/page.module.css
+++ b/app/motors/page.module.css
@@ -5,12 +5,6 @@
     height: 500px;
     width: 100%;
 }
-.title{
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .motorDetail{
     width: 18%;
     height: 80%;
@@ -18,3 +12,16 @@
     border-radius: 10px;
 
 }
+.title{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+.circleContainer{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: auto;
+    padding-right: auto;
+    border: 1px solid black;
+}
+
