--- a/app/motors/page.module.css
+++ b/app/motors/page.module.css
@@ -22,6 +22,8 @@
     margin-right: auto;
     padding-left: auto;
     padding-right: auto;
-    border: 1px solid black;
+    border: 2px solid blue;
+    height: fit-content;
+    width: fit-content;
 }
 
